# Telegram-Obsidian

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BLUEPRINT_CRITICAL_AUDIT_codex.md  BOT_ARCHITECTURE_ROADMAP.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  INCIDENT_PLAYBOOK.md  OPEN_SOURCE_CHECKLIST.md  PLANS.md  PRD_v1.md  PRODUCT_BLUEPRINT_BOT_MINIAPP.md  Product_Blueprint.md  Product_Blueprint_Critique.md  README.md  RELEASE_NOTES.md  RUNBOOK.md  audit_report.md  billing_details.example.txt  billing_details.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_local.ps1
.github/workflows/: ci.yml
deploy/couchdb/: local.ini
deploy/systemd/: telegram-obsidian-alert.sh  telegram-obsidian-alert@.service  telegram-obsidian-bot.service  telegram-obsidian-worker.service
scripts/: audit_khoj_usage.sh  backup_state.py  bot_integration_legacy.py  db_integrity_check.py  internal_smoke.py  predeploy_guard.py  publish_clean.ps1  recover_stuck_jobs.py  restore_state.py  run_mega_smoke.ps1  start_all.ps1  start_role.ps1  telegram_bot_legacy.py  tg_mega_smoke.py  tg_smoke_test.py  weekly_healthcheck.py
src/: __init__.py  config.py  main.py  watcher.py  worker.py
src/bot/: __init__.py  auth.py  commands.py  keyboards.py  miniapp.py  telegram_router.py
src/infra/: __init__.py  ai_fallback.py  gdrive.py  health.py  logging.py  metrics.py  resilience.py  runtime_state.py  storage.py  telemetry.py  tenancy.py
src/obsidian/: __init__.py  block_merge.py  couchdb_bridge.py  display.py  note_schema.py  note_writer.py  search.py  vault_router.py
src/parsers/: __init__.py  article_parser.py  models.py  pdf_parser.py  router.py  twitter_fallback_parser.py  url_safety.py  voice_parser.py  youtube_parser.py
src/pipeline/: __init__.py  actions.py  ai_service.py  dedup.py  enrichment.py  ingest.py  jobs.py  normalize.py
src/rag/: __init__.py  chunker.py  embedder.py  index_store.py  retriever.py
tests/: test_ai_worker.py  test_commands_runtime.py  test_commands_smoke.py  test_config_security.py  test_coverage_gdrive.py  test_coverage_remaining.py  test_delete_confirmation_flow.py  test_embedder_resilience.py  test_enrichment.py  test_gdrive.py  test_index_store.py  test_job_command.py  test_main_runtime.py  test_parser_misc_completion.py  test_parser_security.py  test_parsers_additional.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_refactor_v2.py  test_refactor_v3.py  test_router_watcher_search.py  test_runtime_completion.py  test_runtime_edges.py  test_runtime_state.py  test_storage_completion.py  test_support_modules.py  test_telegram_media_router.py  test_url_resilience.py  test_voice_parser.py  test_voice_routing.py  test_watcher.py
